# semantic-seo-toolkit

./: .env.example  .gitignore  README.md  ROADMAP.md  config.yaml.example  pyproject.toml  requirements.txt  setup.py
docs/: api_reference.md  architecture.md  modules.md  persona_development.md  prompt_engineering.md  setup_guides.md
docs/modules/: persona-builder.md
examples/: entity_extraction_example.py  entity_extraction_spacy.py  gap_analysis_example.py  generate_and_test_prompts.py  hybrid_search_example.py  persona_building_example.py  personas_from_customer_data.py  query_classification.py  query_classification_example.py
src/: __init__.py
src/api_clients/: __init__.py  openai_client.py
src/config/: __init__.py  config_manager.py  settings.py
src/entity_extraction/: __init__.py  entity_extractor.py
src/persona_builder/: __init__.py  persona_builder.py
src/query_classifier/: __init__.py  query_classifier.py
src/semantic_seo/: __init__.py
src/semantic_seo/shared/: __init__.py
src/semantic_seo/shared/api_clients/: __init__.py  anthropic_client.py  google_nlp.py  (+2 more)
src/semantic_seo/stage0/: __init__.py
src/semantic_seo/stage1/: __init__.py
src/semantic_seo/stage2/: __init__.py
src/semantic_seo/stage3/: __init__.py
src/semantic_seo/stage4/: __init__.py
src/semantic_seo/stage5/: __init__.py
src/semantic_seo/stage6/: __init__.py
src/semantic_seo/stage7/: __init__.py
src/utils/: __init__.py  text_processing.py
tests/: test_classifier_stub.py  test_config_loader.py  test_embeddings_stub.py
tests/unit/: test_persona_builder.py
(+66 files in other folders)
